@@ -2,6 +2,8 @@ Version 2.7
 -----------
 * mjd2day and day2mjd to python3
 * python3
+* difxcopy and mvdifxhere now belong here
+* python programs: store locally as .py, rename on install
 * Post DiFX 2.6
 
 Version 2.5
